k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  namespace: ecom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: vaibhav126/api-gateway:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: ecom
spec:
  selector:
    app: api-gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
